--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -3,12 +3,27 @@ spring:
     name: shawa-cloud
   thymeleaf:
     cache: false
+  sql:
+    init:
+      mode: never # embedded # always
+#  cassandra:
+#    keyspace-name: shawacloud
+#    schema-action: recreate # гарантирует удаление и воссоздание любых таблиц и пользовательских типов при каждом запуске приложения
+#    local-datacenter: datacenter1
+#    username: cassandra   todo: add credentials
+#    password: 75sdQL57
   datasource:
     generate-unique-name: false
     name: shawacloud
     url: jdbc:h2:file:/h2/shawacloud
     username: h2
     password: 75sdQL57
-  sql:
-    init:
-      mode: always # embedded
+  jpa:
+    hibernate:
+      ddl-auto: none
+    show-sql: true
+    properties:
+      hibernate:
+        format_sql: true
+        highlight_sql: true
+    database-platform: org.hibernate.dialect.H2Dialect
