--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -5,7 +5,7 @@ spring:
     cache: false
   sql:
     init:
-      mode: never # embedded # always
+      mode: never # embedded always
 #  cassandra:
 #    keyspace-name: shawacloud
 #    schema-action: recreate # гарантирует удаление и воссоздание любых таблиц и пользовательских типов при каждом запуске приложения
