--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -5,19 +5,24 @@ spring:
     cache: false
   sql:
     init:
-      mode: never # embedded always
-#  cassandra:
-#    keyspace-name: shawacloud
-#    schema-action: recreate # гарантирует удаление и воссоздание любых таблиц и пользовательских типов при каждом запуске приложения
-#    local-datacenter: datacenter1
-#    username: cassandra   todo: add credentials
+      mode: always # embedded never
+  cassandra:
+    keyspace-name: shawacloud
+    schema-action: recreate # гарантирует удаление и воссоздание любых таблиц и пользовательских типов при каждом запуске приложения
+    contact-points: localhost
+    port: 9042
+    local-datacenter: datacenter1
+#    username: cassandra   # todo: add credentials
 #    password: 75sdQL57
+
   datasource:
     generate-unique-name: false
     name: shawacloud
-    url: jdbc:h2:file:/h2/shawacloud
-    username: h2
-    password: 75sdQL57
+    url: jdbc:cassandra://localhost:9042/shawacloud
+#    driver-class-name: com.datastax.oss.driver.api.core.DriverConfigLoader;
+#    url: jdbc:h2:file:/h2/shawacloud
+#    username: h2
+#    password: 75sdQL57
   jpa:
     hibernate:
       ddl-auto: none
@@ -26,4 +31,4 @@ spring:
       hibernate:
         format_sql: true
         highlight_sql: true
-    database-platform: org.hibernate.dialect.H2Dialect
+#    database-platform: org.hibernate.dialect.H2Dialect
