--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -8,12 +8,16 @@ spring:
       mode: always # embedded never
   cassandra:
     keyspace-name: shawacloud
-    schema-action: recreate # гарантирует удаление и воссоздание любых таблиц и пользовательских типов при каждом запуске приложения
-    contact-points: localhost
-    port: 9042
+    schema-action: recreate # none # create_if_not_exists: гарантирует удаление и воссоздание любых таблиц и пользовательских типов при каждом запуске приложения
     local-datacenter: datacenter1
-#    username: cassandra   # todo: add credentials
-#    password: 75sdQL57
+    contact-points: localhost
+#    contact-points: # A contact point is the host where a Cassandra node is running.
+#      - casshost-1.tacocloud.com
+#      - casshost-2.tacocloud.com
+#      - casshost-3.tacocloud.com
+    port: 9042
+    username: cassandra
+    password: 75sdQL57
 
   datasource:
     generate-unique-name: false
@@ -23,12 +27,12 @@ spring:
 #    url: jdbc:h2:file:/h2/shawacloud
 #    username: h2
 #    password: 75sdQL57
-  jpa:
-    hibernate:
-      ddl-auto: none
-    show-sql: true
-    properties:
-      hibernate:
-        format_sql: true
-        highlight_sql: true
-#    database-platform: org.hibernate.dialect.H2Dialect
+#  jpa:
+#    hibernate:
+#      ddl-auto: update # none
+#    show-sql: true
+#    properties:
+#      hibernate:
+#        format_sql: true
+#        highlight_sql: true
+##    database-platform: org.hibernate.dialect.H2Dialect
